
add_subdirectory(test.unit.api.combine_paths)
add_subdirectory(test.unit.api.create_directory)
add_subdirectory(test.unit.api.squeeze_path)
add_subdirectory(test.unit.api.stat)
add_subdirectory(test.unit.c.retcodes)
add_subdirectory(test.unit.cpp.combine_paths)
add_subdirectory(test.unit.cpp.derive_relative_path)
add_subdirectory(test.unit.cpp.retcodes)
add_subdirectory(test.unit.cpp.squeeze_path)

