
add_executable(example_cpp_2
    example_cpp_2.cpp
)

target_link_libraries(example_cpp_2
    recls
)

target_compile_options(example_cpp_2 PRIVATE
    $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:
        -Werror -Wall -Wextra -pedantic
    >
    $<$<CXX_COMPILER_ID:MSVC>:
        /WX /W4
    >
)

